--- a/templates/back/pokemon/index.html.twig
+++ b/templates/back/pokemon/index.html.twig
@@ -1,12 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_back.html.twig' %}
 
 {% block title %}Pokedex{% endblock %}
 
 {% block body %}
     {% for pokemon in pokemons %}
-        {{ pokemon.name }} -
+        {{ pokemon.name|capitalize }} -
+
         <a href="{{ path('back_pokemon_show', {'id': pokemon.id}) }}">Voir</a>
         <a href="{{ path('back_pokemon_update', {'id': pokemon.id}) }}">Modifier</a>
         <a href="{{ path('back_pokemon_remove', {'id': pokemon.id, 'token': csrf_token('remove' ~ pokemon.id)}) }}">Supprimer</a> <br>
+    {% else %}
+        Aucun pokemon trouvé
     {% endfor %}
 {% endblock %}
