--- a/templates/back/pokemon/show.html.twig
+++ b/templates/back/pokemon/show.html.twig
@@ -1,8 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_back.html.twig' %}
 
-{% block title %}Pokedex - {{ pokemon.name }}{% endblock %}
+{% block title %}Pokedex - {{ pokemon.name }} {{ parent() }}{% endblock %}
 
 {% block body %}
     <a href="{{ path('back_pokemon_index') }}">Retour au pokedex</a> <br><br>
+
     {{ pokemon.name }} -
 {% endblock %}
