--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Log in!{% endblock %}
 
+ {% block stylesheets %}
+     {{ parent() }}
+     {{ encore_entry_link_tags('login') }}
+ {% endblock %}
+
 {% block body %}
 <form method="post">
     {% if error %}
@@ -14,7 +19,7 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="text-2xl">Please sign in</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
